Fix css whitespace in multiple space username

--- a/app/src/components/AutoSuggestInput/AutoSuggestInput.scss
+++ b/app/src/components/AutoSuggestInput/AutoSuggestInput.scss
@@ -72,6 +72,7 @@
         text-align: left;
         font-size: 1em;
         cursor: pointer;
+        white-space: pre;
 
         &.-highlighted {
           background: $gray-09;
