--- a/app/src/components/Button/Button.scss
+++ b/app/src/components/Button/Button.scss
@@ -18,6 +18,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  white-space: pre;
   height: 45px;
 
   &.-loading,
