--- a/app/src/components/PageHeader/PageHeader.scss
+++ b/app/src/components/PageHeader/PageHeader.scss
@@ -18,6 +18,7 @@
     font-family: 'Lato';
     font-size: 1.6em;
     padding-right: 30px;
+    white-space: pre;
   }
 
   &__actions {
