--- a/app/src/components/PlayerTag/PlayerTag.scss
+++ b/app/src/components/PlayerTag/PlayerTag.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  white-space: pre;
 
   &__type {
     margin-right: 10px;
