--- a/app/src/pages/Competition/components/TopPlayerWidget/TopPlayerWidget.scss
+++ b/app/src/pages/Competition/components/TopPlayerWidget/TopPlayerWidget.scss
@@ -20,6 +20,7 @@
     font-size: 1.6em;
     font-weight: 900;
     margin-top: -2px;
+    white-space: pre;
 
     &.-placeholder {
       width: 80%;
